# ci-skeleton

./: CMakeLists.txt  Jenkinsfile  README.md
cmake/: GetDoctest.cmake
include/: Skeleton.h
src/: CMakeLists.txt  Skeleton.cpp
tests/: CMakeLists.txt  test-skeleton.cpp
